--- a/game mobile.html
+++ b/game mobile.html
@@ -16,7 +16,7 @@
     #character {
       width: 200px;
       height: 200px;
-      background-image: url(dinosaurier.png);
+      background-image: url(dinosaurier.png); /* Icon made by Freepik from www.flaticon.com */
       background-size: cover;
       position: relative;
       top: 650px;
