--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
 
   <!-- Neues Video-Element für die Spielanleitung -->
   <video id="instruction-video">
-    <source src="spielanleitung.mov" type="video/quicktime">
+    <source src="spielanleitung.mp4" type="video/mp4">
+    <source src="spielanleitung.mp4" type="video/ogg">
     Your browser does not support the video tag.
   </video>
 
