--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
       align-items: center;
     }
 
-    /* Eindeutige IDs für die Game Over-Buttons */
     #gobutton-restart {
       margin: 10px;
       width: 150px;
@@ -188,7 +187,7 @@
       z-index: -100;
     }
 
-    /* Neues Video-Element für die Spielanleitung */
+    /* Neues Video-Element für die Spielanleitung mit playsinline */
     #instruction-video {
       display: none;
       position: fixed;
@@ -198,6 +197,8 @@
       height: 100%;
       z-index: 1000;
       background: black;
+      playsinline: true;
+      -webkit-playsinline: true;
     }
 
     /* Anpassungen für mobile Endgeräte */
@@ -279,8 +280,8 @@
     </video>
   </div>
 
-  <!-- Neues Video-Element für die Spielanleitung (jetzt MP4 und muted) -->
-  <video id="instruction-video" muted>
+  <!-- Neues Video-Element für die Spielanleitung (jetzt MP4, muted, playsinline, webkit-playsinline) -->
+  <video id="instruction-video" muted playsinline webkit-playsinline>
     <source src="spielanleitung.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -295,14 +296,12 @@
     let stoneGenerationTimeout;
     let heartGenerationTimeout;
 
-    // Registriere EventListener erst, wenn das DOM geladen ist
+    // Registriere Touch-Listener für die Game Over-Buttons, sobald das DOM geladen ist
     window.addEventListener('DOMContentLoaded', function () {
-      // Start-Button: Zusätzlich Touchend
       document.getElementById("startbutton").addEventListener("touchend", function (e) {
         e.preventDefault();
         showInstructionVideo();
       });
-      // Game Over Buttons
       document.getElementById("gobutton-restart").addEventListener("touchend", function (e) {
         e.preventDefault();
         restart();
